# routes/library.js
@@ -4,8 +4,8 @@ const router = express.Router();
 const libraryController = require('../controllers/library');
 
 router.get('/:id', libraryController.fullLibrary);
-router.put('/:id/:bookId', libraryController.addBook);
-router.delete('/:id/:bookId', libraryController.deleteBook);
+router.put('/:id', libraryController.addBook);
+router.delete('/:id', libraryController.deleteBook);
 
 
 module.exports = router;
